created logic for unattended passwordless keyring initialization

--- a/default/hypr/autostart.conf
+++ b/default/hypr/autostart.conf
@@ -6,4 +6,5 @@ exec-once = uwsm app -- swaybg -i ~/.config/omarchy/current/background -m fill
 exec-once = uwsm app -- swayosd-server
 exec-once = uwsm app -- walker --gapplication-service
 exec-once = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec-once = uwsm app -- pass-secret-service
 exec-once = wl-clip-persist --clipboard regular --all-mime-type-regex '^(?!x-kde-passwordManagerHint).+'
